Bloqueo visual hasta medianoche

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         </div>
       </div>
 
-      <div class="heroRight">
+      <div class="heroRight lockable">
         <div class="orb" id="orb" aria-hidden="true">
           <div class="orbGlow"></div>
           <div class="orbInner">
@@ -79,7 +79,7 @@
     </section>
 
     <section class="grid">
-      <article class="card panel tilt" id="panel1">
+      <article class="card panel tilt lockable" id="panel1">
         <h2>Constelación Mushu</h2>
         <p class="muted">
           Esto es interactivo: mueve el mouse (o el dedo) y vas a doblar el universo.
@@ -93,7 +93,7 @@
         </div>
       </article>
 
-      <article class="card panel">
+      <article class="card panel lockable">
         <h2>3 promesas</h2>
         <ul class="list" id="promises">
           <li>Hacerte reír aunque el día venga pesado.</li>
@@ -109,7 +109,7 @@
       </article>
     </section>
 
-    <section class="card final" id="finalCard">
+    <section class="card final lockable" id="finalCard">
       <h2 id="finalTitle">Cuando se abra…</h2>
       <p class="muted" id="finalText">
         vas a ver fuegos, confetti, una carta animada y el cielo cambiando de color.
